Add a first, but empty test.
Just so we have the build structure set up for it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,3 +72,5 @@ EXTRA_DIST += $(desktop_DATA) $(icon_DATA) \
 glade_DATA = data/prefixsuffix.glade
 EXTRA_DIST += $(glade_DATA)
 
+include Makefile_tests.am
+
