Makefile.am: Add generated .desktop file to CLEANFILES to fix distcheck.

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,5 +74,8 @@ EXTRA_DIST += $(desktop_DATA) $(icon_DATA) \
 glade_DATA = data/prefixsuffix.glade
 EXTRA_DIST += $(glade_DATA)
 
+CLEANFILES = \
+	$(desktop_DATA)
+
 include Makefile_tests.am
 
