Build: Require (and use) C++11.

--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,8 @@ AC_ARG_VAR([ACLOCAL_FLAGS], [aclocal flags, e.g. -I <macro dir>])
 dnl Checks for programs.
 AC_PROG_CXX
 
+AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])
+
 dnl Checks for libraries.
 PKG_CHECK_MODULES(DEPS, gtkmm-3.0)
 
