--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "app-id": "org.glom.PrefixDevel",
+    "app-id": "org.gnome.PrefixSuffix",
     "version": "master",
     "runtime": "org.gnome.Platform",
     "runtime-version": "3.18",
