--enable-warnings=fatal: Add some more that I like.

--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ MM_PREREQ([0.9.5])
 AC_LANG([C++])
 MM_ARG_ENABLE_WARNINGS([PREFIXSUFFIX_WXXFLAGS],
                        [-Wall],
-                       [-pedantic -Wall -Wextra -Wformat-security -Wno-missing-field-initializers -DGSEAL_ENABLE],
+                       [-pedantic -Wall -Wextra -Wsuggest-override -Wshadow -Wformat-security -Wno-missing-field-initializers -DGSEAL_ENABLE],
                        [G GDK GDK_PIXBUF GTK GLIBMM GDKMM CAIROMM PANGOMM GTKMM SIGCXX])
 
 
