--- a/data/io.github.murraycu.PrefixSuffix.gschema.xml.in
+++ b/data/io.github.murraycu.PrefixSuffix.gschema.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <schemalist>
-	<schema id="org.gnome.prefixsuffix" path="/org/gnome/prefixsuffix/" gettext-domain="@GETTEXT_PACKAGE@">
+	<schema id="io.github.murraycu.PrefixSuffix" path="/io/github/murraycu/PrefixSuffix/" gettext-domain="@GETTEXT_PACKAGE@">
 		<key name="prefix-replace" type="s">
 			<default>''</default>
 			<summary>Rename files that have this prefix.</summary>
