--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([PrefixSuffix],[0.6.8],[http://bugzilla.gnome.org/enter_bug.cgi?product=PrefixSuffix],[prefixsuffix])
+AC_INIT([PrefixSuffix],[0.6.8],[https://github.com/murraycu/prefixsuffix/issues],[prefixsuffix])
 AC_PREREQ(2.63)
 
 AC_CONFIG_SRCDIR([src/main.cc])
