--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,10 @@ AC_DEFINE([GETTEXT_PACKAGE], [PACKAGE_TARNAME], [Define to the gettext package n
 
 GLIB_GSETTINGS
 
+# GResources
+GLIB_COMPILE_RESOURCES=`$PKG_CONFIG --variable glib_compile_resources gio-2.0`
+AC_SUBST(GLIB_COMPILE_RESOURCES)
+
 AC_CONFIG_FILES([Makefile
                  po/Makefile.in
                  data/prefixsuffix.desktop.in
