--- a/Makefile_tests.am
+++ b/Makefile_tests.am
@@ -19,16 +19,66 @@
 check_PROGRAMS = \
 	tests/test_rename_strings
 
+# Build the gtest static library.
+# Note that this uses pthreads, so we must use -pthread when build the tests.
+gtest_top = googletest/googletest
+check_LIBRARIES = libgtest.a
+libgtest_a_SOURCES = \
+  googletest/googletest/src/gtest-all.cc \
+  googletest/googletest/src/gtest_main.cc
+libgtest_a_CPPFLAGS = \
+  -I$(top_srcdir)/$(gtest_top)/include \
+  -I$(top_srcdir)/$(gtest_top)
+libgtest_a_LDFLAGS = -pthread
+EXTRA_DIST += \
+  $(gtest_top)/src/gtest-all.cc \
+  $(gtest_top)/src/gtest-filepath.cc \
+  $(gtest_top)/src/gtest-printers.cc \
+  $(gtest_top)/src/gtest.cc \
+  $(gtest_top)/src/gtest_main.cc \
+  $(gtest_top)/src/gtest-test-part.cc \
+  $(gtest_top)/src/gtest-death-test.cc \
+  $(gtest_top)/src/gtest-port.cc \
+  $(gtest_top)/src/gtest-typed-test.cc \
+  $(gtest_top)/src/gtest-internal-inl.h \
+  $(gtest_top)/include/gtest/gtest-death-test.h \
+  $(gtest_top)/include/gtest/gtest_pred_impl.h \
+  $(gtest_top)/include/gtest/gtest-test-part.h \
+  $(gtest_top)/include/gtest/gtest.h \
+  $(gtest_top)/include/gtest/gtest-printers.h \
+  $(gtest_top)/include/gtest/gtest-typed-test.h \
+  $(gtest_top)/include/gtest/gtest-message.h \
+  $(gtest_top)/include/gtest/gtest_prod.h \
+  $(gtest_top)/include/gtest/gtest-param-test.h \
+  $(gtest_top)/include/gtest/gtest-spi.h \
+  $(gtest_top)/include/gtest/internal/gtest-death-test-internal.h \
+  $(gtest_top)/include/gtest/internal/gtest-port-arch.h \
+  $(gtest_top)/include/gtest/internal/gtest-filepath.h \
+  $(gtest_top)/include/gtest/internal/gtest-port.h \
+  $(gtest_top)/include/gtest/internal/gtest-internal.h \
+  $(gtest_top)/include/gtest/internal/gtest-string.h \
+  $(gtest_top)/include/gtest/internal/gtest-linked_ptr.h \
+  $(gtest_top)/include/gtest/internal/gtest-tuple.h \
+  $(gtest_top)/include/gtest/internal/gtest-param-util-generated.h \
+  $(gtest_top)/include/gtest/internal/gtest-type-util.h \
+  $(gtest_top)/include/gtest/internal/gtest-param-util.h \
+  $(gtest_top)/include/gtest/internal/custom/gtest.h \
+  $(gtest_top)/include/gtest/internal/custom/gtest-printers.h \
+  $(gtest_top)/include/gtest/internal/custom/gtest-port.h
+
 TESTS = \
 	tests/test_rename_strings
 
 prefixsuffix_includes = -I$(top_builddir)/src -I$(top_srcdir)/src -I$(top_builddir) -I$(top_srcdir)
-tests_cppflags = $(prefixsuffix_includes) $(DEPS_CFLAGS) $(PREFIXSUFFIX_WXXFLAGS)
-tests_ldadd = $(DEPS_LIBS)
+tests_cppflags = $(prefixsuffix_includes) $(DEPS_CFLAGS) $(PREFIXSUFFIX_WXXFLAGS) \
+  -I$(top_srcdir)/$(gtest_top)/include
+tests_ldadd = $(DEPS_LIBS) $(top_builddir)/libgtest.a
+tests_ldflags = -pthread
 
 tests_test_rename_strings_SOURCES = tests/test_rename_strings.cc \
 	src/string_renamer.cc \
 	src/string_renamer.h
 tests_test_rename_strings_LDADD = $(tests_ldadd)
+tests_test_rename_strings_LDFLAGS = $(tests_ldflags)
 tests_test_rename_strings_CPPFLAGS = $(tests_cppflags)
 
