--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,7 @@ AC_ARG_VAR([ACLOCAL_FLAGS], [aclocal flags, e.g. -I <macro dir>])
 
 dnl Checks for programs.
 AC_PROG_CXX
+AC_PROG_RANLIB
 
 AX_CXX_COMPILE_STDCXX([14], [noext],[optional])
 
