--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable (test_rename_strings
   ${CMAKE_SOURCE_DIR}/src/string_renamer.h)
 target_link_libraries (test_rename_strings ${DEPS_LIBRARIES})
 add_test (test_rename_strings ${CMAKE_CURRENT_BINARY_DIR}/test_rename_strings)
+target_link_libraries (test_rename_strings gtest gtest_main)
