Build: Tests: Use separate warnings when building googletest.
And use the googletest headers via -isystem instead of -I.

The compiler is then more forgiving of the code in the headers,
so we won't see a warning about the missing override keyword
( https://github.com/google/googletest/issues/533 )
but we will still see warnings from our own code.
See https://gcc.gnu.org/onlinedocs/cpp/System-Headers.html

Thanks to Martin:
http://www.murrayc.com/permalink/2016/12/08/trying-googletest/#comment-332886

--- a/Makefile_tests.am
+++ b/Makefile_tests.am
@@ -70,8 +70,8 @@ TESTS = \
 	tests/test_rename_strings
 
 prefixsuffix_includes = -I$(top_builddir)/src -I$(top_srcdir)/src -I$(top_builddir) -I$(top_srcdir)
-tests_cppflags = $(prefixsuffix_includes) $(DEPS_CFLAGS) $(PREFIXSUFFIX_WXXFLAGS) \
-  -I$(top_srcdir)/$(gtest_top)/include
+tests_cppflags = $(prefixsuffix_includes) $(DEPS_CFLAGS) $(PREFIXSUFFIX_GTEST_WXXFLAGS) \
+  -isystem $(top_srcdir)/$(gtest_top)/include
 tests_ldadd = $(DEPS_LIBS) $(top_builddir)/libgtest.a
 tests_ldflags = -pthread
 
